--- a/stockings/templates/stockings/portfolio_detail.html
+++ b/stockings/templates/stockings/portfolio_detail.html
@@ -22,6 +22,7 @@
             <td>{{ item.stock_count }}</td>
             <td>{{ item.profit }}</td>
             <td>{{ item.profit_rate }}</td>
+            <td>{{ item.last_update }}</td>
         </tr>
         {% endif %}
     {% endfor %}
@@ -39,6 +40,7 @@
             <td>{{ item.stock_count }}</td>
             <td>{{ item.profit }}</td>
             <td>{{ item.profit_rate }}</td>
+            <td>{{ item.last_update }}</td>
         </tr>
         {% endif %}
     {% endfor %}
